<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Update_restaurant">
<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background">
    <TextView
            android:id="@+id/txt_update_restaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_update_restaurant"
            android:layout_centerHorizontal="true"
            android:textSize="40sp"
            app:fontFamily="@font/muli_bold"
            android:layout_gravity="center"
            android:gravity="center"/>


    <EditText
            android:id="@+id/etUpdate_Restaurant_Name"
            android:background="@color/et_background"
            android:layout_marginHorizontal="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_update_restaurant"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:hint="@string/edit_name_of_restaurant"
            android:layout_centerHorizontal="true"
    />

    <TextView
            android:id="@+id/txt_update_restaurant_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_address_below"
            android:layout_marginHorizontal="50dp"
            android:textSize="24sp"
            android:textColor="#fff"
            android:layout_gravity="center"
            android:layout_below="@id/etUpdate_Restaurant_Name"
            android:layout_marginTop="10dp"
            />
    <EditText
            android:id="@+id/etUpdate_Restaurant_City"
            android:background="@color/et_background"
            android:layout_marginHorizontal="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_update_restaurant_address"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:hint="@string/edit_city_of_restaurant"
            android:layout_centerHorizontal="true"
    />
    <EditText
            android:id="@+id/etUpdate_Restaurant_Street"
            android:background="@color/et_background"
            android:layout_marginHorizontal="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etUpdate_Restaurant_City"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:hint="@string/edit_street_of_restaurant"
            android:layout_centerHorizontal="true"
    />
    <EditText
            android:id="@+id/etUpdate_Restaurant_Street_Number"
            android:background="@color/et_background"
            android:layout_marginHorizontal="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etUpdate_Restaurant_Street"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:text=""
            android:hint="@string/edit_streetnumber_of_restaurant"
            android:inputType="number"
            android:layout_centerHorizontal="true"
    />
    <TextView
            android:id="@+id/txt_update_restaurant_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_phone_below"
            android:layout_marginHorizontal="50dp"
            android:textSize="24sp"
            android:textColor="#fff"
            android:layout_gravity="center"
            android:layout_below="@id/etUpdate_Restaurant_Street_Number"
            android:layout_marginTop="10dp"/>
    <EditText
            android:id="@+id/etUpdate_Restaurant_Phone"
            android:background="@color/et_background"
            android:layout_marginHorizontal="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_update_restaurant_phone"
            android:textSize="20sp"
            android:inputType="phone"
            android:layout_marginTop="20dp"
            android:hint=""
            android:layout_centerHorizontal="true"
    />




    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/title_update_restaurant"
            android:layout_marginBottom="0dp"
            android:textColor="#fff"
            android:textSize="30sp"
            android:onClick="update_record"
            android:layout_below="@id/etUpdate_Restaurant_Phone"
            android:layout_marginTop="20dp"
    />
</RelativeLayout>
</ScrollView>