<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Add_dish"
        android:background="@color/main_background">

    <TextView
            android:id="@+id/txt_add_dish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_add_dish"
            android:layout_centerHorizontal="true"
            android:textSize="35sp"
            app:fontFamily="@font/muli_bold"
            android:layout_gravity="center"
            android:gravity="center"/>
    <EditText
            android:id="@+id/etAddDishName"
            android:background="@color/et_background"
            android:layout_marginHorizontal="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_add_dish"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:hint="@string/add_name_of_dish"
            android:layout_centerHorizontal="true"
    />
    <EditText
            android:id="@+id/etAddDishIngredients"
            android:layout_below="@id/etAddDishName"
            android:inputType="textMultiLine"
            android:gravity="top|left"
            android:lines="4"
            android:minLines="4"
            android:maxLength="499"
            android:layout_marginHorizontal="50dp"
            android:background="@color/et_background"
            android:layout_marginTop="20dp"
            android:hint="@string/add_ingredients_of_dish"
            android:maxLines="4"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:scrollbars="vertical"
            android:textSize="20sp"/>
    <EditText
            android:id="@+id/etAddDishPrice"
            android:background="@color/et_background"
            android:layout_marginHorizontal="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etAddDishIngredients"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:hint="@string/add_price_of_dish"
            android:layout_centerHorizontal="true"/>




    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/title_add_dish"
            android:textColor="#fff"
            android:textSize="30sp"
            android:onClick="Add_To_Menu"
            android:layout_alignParentBottom="true"
    />
</RelativeLayout>