<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
            android:background="@color/main_background">
    <LinearLayout
                  android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
    android:weightSum="5"
    android:layout_marginHorizontal="10dp"
    android:layout_marginTop="5dp">
        <TextView
                android:id="@+id/txtRestaurantName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_gravity="center_vertical"/>
        <TextView
                android:id="@+id/txtRestaurantAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.8"
                android:lines="3"
                android:textStyle="bold"
                android:textSize="10sp"
                android:gravity="center_vertical"
                android:layout_marginTop="-10dp"
        />
        <TextView
                android:text=""
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"/>
        <Button
                android:id="@+id/btnUpdate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/update"
                android:background="@color/colorPrimary"
                android:textColor="#fff"
                android:textSize="20sp"
                android:layout_weight="1.5"

        />
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="5"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"

            >
        <Button
                android:id="@+id/btnMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/menu"
                android:background="@color/colorPrimary"
                android:textColor="#fff"
                android:textSize="20sp"
                android:layout_weight="1.3"

        />
        <TextView

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"/>
        <TextView
                android:id="@+id/txtRestaurantPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:lines="2"
                android:textStyle="bold"
                android:textSize="12sp"
                android:gravity="center_vertical"/>
        <TextView
                android:text=""
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"/>
        <Button
                android:id="@+id/btnDelete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:background="@color/colorPrimary"
                android:textColor="#fff"
                android:textSize="20sp"
                android:layout_weight="1.5"
        />

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/recycler_line"

    >
        <TextView android:layout_width="match_parent"    android:layout_marginBottom="5dp" android:layout_height="wrap_content"/>
    </LinearLayout>


</LinearLayout>
